# bedrock-agentcore-strands-mcp-runtime

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICK_REFERENCE.md  README.md  REVIEW_SUMMARY.md  push-to-ecr.sh  pyproject.toml
.github/workflows/: README.md  deploy.yml  destroy.yml
docs/: ATLASSIAN_MCP_INTEGRATION.md  ATLASSIAN_MCP_INTEGRATION_BACKEND.md  ATLASSIAN_MCP_INTEGRATION_FRONTEND.md  AUTHENTICATION.md  CLOUDWATCH_LOGS.md  JWT_TOKEN_GUIDE.md  TERRAFORM_RESOURCES.md  runtime-gateway-integration.md  strands-agent-integration.md
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.module.ts
frontend/src/app/components/: chat.component.html  (+1 more)
frontend/src/environments/: environment.example.ts  environment.prod.example.ts  environment.prod.ts  environment.ts
infra/terraform/: README.md
infra/terraform/cognito/: backend.tf  main.tf  outputs.tf  variables.tf
infra/terraform/ecr/: backend.tf  main.tf  variables.tf
infra/terraform/gateway/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example-api-key  terraform.tfvars.example-oauth  terraform.tfvars.github.example  variables.tf
infra/terraform/memory/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/runtime/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: invoke.py
src/agentcore_strands/: __init__.py  agent.py  agent_factory.py  config.py  hooks.py  system-prompt.md  transport.py  utils.py
(+12 files in other folders)
