[project]
name = "agentcore-strands-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=0.1.0",
    "bedrock-agentcore>=0.1.0",
    "aws-opentelemetry-distro>=0.15.0",
    "mcp-proxy-for-aws>=1.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcore_strands"]
